Make SVG scale properly (no overflow, resolves #4)

--- a/src/style.css
+++ b/src/style.css
@@ -7,4 +7,11 @@
 
 body, body * {
     font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
+    overflow: hidden;
+}
+
+svg {
+    position:fixed;
+    height:100%;
+    width:100%
 }
